# pkgin

./: .gitignore  CHANGES  CHANGES.md  CNAME  CONTRIBUTORS  Doxyfile  Makefile  Makefile.am  Makefile.in  NOTES  README  README.md  REPOSITORIES  TODO  _pkgin  aclocal.m4  actions.c  autoremove.c  cmd.h  config.guess  config.h  config.h.in  config.status  config.sub  configure  configure.ac  cov_model.c  depends.c  download.c  fsops.c  global.css  impact.c  index.html  main.c  messages.h  mkpkgindb.sh  order.c  pkg_check.c  pkg_files.c  pkg_infos.c  (+24 more)
.github/workflows/: build-pkgin-tags.yml
htdocs/: global.css  index.html
